--- a/web-app/css/app.css
+++ b/web-app/css/app.css
@@ -45,6 +45,42 @@ ul.actions {
     right: 1.5em;
 }
 
+.post-tag, a.post-tag{
+	color:#3E6D8E;
+	background-color:#E0EAF1;
+	border-bottom:1px solid #b3cee1;
+	border-right:1px solid #b3cee1;
+	padding:3px 4px 3px 4px;
+	margin:2px 2px 2px 0;
+	text-decoration:none;
+	font-size:90%;
+	line-height:2.4;
+	white-space:nowrap;
+}
+
+a.post-tag:hover,.post-text a.post-tag:hover, a.post-tag:hover,a.post-tag.selected{
+	background-color:#c4dae9;
+	border-bottom:1px solid #c4dae9;
+	border-right:1px solid #c4dae9;
+	text-decoration:none;
+}
+
+.comments{
+	width:550px;
+	border-top:dotted 1px #aaa;
+	margin-top:10px;
+	padding-bottom:10px;
+	line-height:135%;
+	color:#444;
+	font-size: 13px;
+}
+
+vote-up-off{
+	
+}
+vote-down-off{
+	
+}
 .due .past {
     color: #D00;
 }
